--- a/experiments/vpa_native_default_scale_down/service.yml
+++ b/experiments/vpa_native_default_scale_down/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-deployment
+  name: php-apache
   labels:
-    run: nginx-deployment
+    run: php-apache
 spec:
   ports:
   - name: web
     port: 80
   selector:
-    run: nginx-deployment
+    run: php-apache
