--- a/experiments/vpa_native_high_mode_only/deployment.yml
+++ b/experiments/vpa_native_high_mode_only/deployment.yml
@@ -1,24 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
-  labels:
-    app: nginx
+  name: php-apache
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      run: php-apache
   template:
     metadata:
       labels:
-        app: nginx
+        run: php-apache
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.7.8
+      - name: php-apache
+        image: registry.k8s.io/hpa-example
         ports:
-        - containerPort: 80
+        - name: web
+          containerPort: 80
         resources:
           requests:
             memory: 5Mi
