--- a/experiments/hpa_native_high_mode_only/service.yml
+++ b/experiments/hpa_native_high_mode_only/service.yml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: php-apache
   labels:
     run: php-apache
+  name: php-apache
 spec:
   ports:
   - name: web
     port: 80
   selector:
     run: php-apache
+  sessionAffinity: None
+  type: NodePort
